Changes have been made to task BJS2-65903-event-organization:
- The logic with DTO has been modified (eventCreateDto and eventViewDto have been added)

- Minor issues have been fixed